[profile.dev]
codegen-units = 1

[package]
name = "d7018e-lpc1347-support"
version = "0.0.3"
authors = ["Axel Sundbom <axel-sundbom@hotmail.com>"]
description = "Provides drivers and peripheral access for the NXP LPC1347"
repository = "https://github.com/ax-rwnd/d7018e-lpc1347-support.git"

[dependencies]
untagged-option = "0.1.1"
cortex-m = "0.3.1"
cortex-m-rtfm = "0.2.2"
cortex-m-rtfm-macros = "0.2.1"
cortex-m-semihosting = "0.2.0"
rtfm-core = "0.1.0"

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
compiletest_rs = "0.2.8"

[dev-dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "^0.3.8"

[dependencies.lpc1347]
features = ["rt"]
version = "0.1.2"
git = "https://github.com/ax-rwnd/rust-lpc1347.git"
branch = "reserved_keywords"

[profile.release]
lto = true
